sophons/apps/zot/statefulset.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.36.1/statefulset-apps-v1.json
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zenlesszonevalkeyrie
  namespace: zzzot
  labels:
    app.kubernetes.io/name: zot
    app.kubernetes.io/instance: zenlesszonezot
    app.kubernetes.io/component: cache
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: zot
      app.kubernetes.io/instance: zenlesszonezot
      app.kubernetes.io/component: cache
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zot
        app.kubernetes.io/instance: zenlesszonezot
        app.kubernetes.io/component: cache
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: cluster.garage.sophons.cloud/global
                    operator: In
                    values: ["true"]
              weight: 100
            - preference:
                matchExpressions:
                  - key: topology.kubernetes.io/region
                    operator: NotIn
                    values: [ng]
              weight: 67

      securityContext:
        runAsUser: 65532
        runAsGroup: 65532
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      volumes:
        - name: tmp
          emptyDir: {}

      containers:
        - name: valkey
          restartPolicy: Always
          image: ghcrd.sphns.run/valkey-io/valkey:9.1.0-alpine3.23@sha256:a35428eba9043cc0b79dbe54100f0c92784f2de00ad09b01182bfb1c5c83d1bd
          # image: pz3.sphns.run/mirror/ghcr.io/valkey-io/valkey:9.1.0-alpine3.23@sha256:a35428eba9043cc0b79dbe54100f0c92784f2de00ad09b01182bfb1c5c83d1bd
          # imagePullPolicy: Never
          args: [--save "1 1"]

          startupProbe:
            exec:
              command: [sh, -c, "valkey-cli PING || exit 1"]

          ports:
            - containerPort: 6379
              name: redis

          volumeMounts:
            - name: tmp
              subPath: valkey-data
              mountPath: /data

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]

          resources:
            requests:
              cpu: 50m
              memory: 16Mi
            limits:
              memory: 64Mi
